--- a/app/index.htm
+++ b/app/index.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>test</title>
+    <title>%TEMPLATE%</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <h1>this is a test page</h1>
+    <h1>WELCOME on  %TEMPLATE% !!</h1>
   </body>
 </html>
